--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCzaWf2OnIyjRW0ba5FzeUtpPO4bHLjFqSag&s"/>
+	<h1>Mishra Ravi Shivshankar</h1>
+	<a href="https://www.linkedin.com/in/ravi-mishra-4038b1267/">Linkdin</a>
+	<section id=skills>
+		<li>Web Development</li>
+		<li>Communication</li>
+		<li>Teaching</li>
+	</section>
+
+	<section id="project">
+		<ul>
+			<li>Bank Management System</li>
+			<li>Online food delivery system</li>
+			<li>Online teaching Platform</li>
+		</ul>
+		
+	</section>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
