--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<li>Teaching</li>
 	</section>
 
-	<section id="project">
+	<section id="projects">
 		<ul>
 			<li>Bank Management System</li>
 			<li>Online food delivery system</li>
